@@ -15,8 +15,6 @@ TODO
 Minor Cleanups and Code Improvements
 ------------------------------------
 
-	Use fwrite_unlocked if available. Brings about 7% speedup for output.
-
 	API:
 		??? #if !defined(GAWK) && !defined(GAWK_OMIT_CONVENIENCE_MACROS)
 
