@@ -48,6 +48,9 @@
 /* Define to 1 if you have the `fmod' function. */
 #undef HAVE_FMOD
 
+/* Define to 1 if you have the `fwrite_unlocked' function. */
+#undef HAVE_FWRITE_UNLOCKED
+
 /* have getaddrinfo */
 #undef HAVE_GETADDRINFO
 
