@@ -1,3 +1,9 @@
+2016-08-29         Aharon Robbins       <aharon.robbins@intel.com>
+
+	* configure.ac (fwrite_unlocked): Check for it.
+	* awk.h (fwrite): Define to fwrite_unlocked if we have it.
+	* NEWS: Make note of speed improvement.
+
 2016-08-25         Arnold D. Robbins     <arnold@skeeve.com>
 
 	POSIX now says use strcmp for == and !=. Thanks to Chet Ramey
